-fix /stat